# basicRAGwithPython

./: README.md  api.py  embeddings.py  gemini_llm.py  main.py  pyproject.toml  rag_service.py  requirements.txt  rerank.py  run_local.ps1  run_local.py  run_local.sh  similarity.py  split_into_chunks.py  streamlit_app.py  vector_store.py
